# melio-user-defined-dialect-example

./: Cargo.toml  README.md  build.rs
Ch2/: CMakeLists.txt
Ch2/include/toy/: Dialects.h
Ch2/mlir/: Dialects.cpp
mlir/: Dialect.cpp  Dialect.h  ToyDialect.cpp.inc  ToyDialect.h.inc  toy.cpp  toy.cpp.inc  toy.h  toy.h.inc
src/: main.rs
